public-subnet.tf
/* Creating the  internet gateway for Public Subnet file */

resource "aws_internet_gateway" "default" {
  vpc_id ="${aws_vpc.default.id}"
}

/* Public Subnet */

resource "aws_subnet" "public" {
   vpc_id     = "${aws_vpc.default.id}"
   cidr_block = "${var.public_subnet_cidr}"
   availability_zone = "ap-south-1a"
   map_public_ip_on_launch = true
   depends_on = ["aws_internet_gateway.default"]
   tags {
    Name = "public"
  }
}

/* Routing table for the public subnet */

resource "aws_route_table" "public" {
  vpc_id  = "${aws_vpc.default.id}"
  route {
     cidr_block = "0.0.0.0/0"
     gateway_id = "${aws_internet_gateway.default.id}"
  }
}

/* Associate the routing table to public subnet */

resource "aws_route_table_association" "public" {
  subnet_id = "${aws_subnet.public.id}"
  route_table_id = "${aws_route_table.public.id}"
}
